--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+index:
+    path: /
+    controller: App\Controller\BlogController::index
+
+post_id:
+    path: /post/{id}
+    controller: App\Controller\BlogController::postDetail
