Implementation of route /post/delete{id} and /post/delete
We can delete a post using id and we can delete all posts

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -7,9 +7,17 @@ post:
     controller: App\Controller\PostController::index
 
 post_create:
-    path: /post/new
+    path: /post/new/
     controller: App\Controller\PostController::createPost
+
+post_delete_all:
+  path : /post/delete/
+  controller: App\Controller\PostController::deleteAllPost
 
 post_show:
     path: /post/{id}
     controller: App\Controller\PostController::showPost
+
+post_delete:
+  path : /post/delete/{id}
+  controller: App\Controller\PostController::deletePost
