Modification of  some routes and improvement on the post's presentation
Sort  the posts by seniority
Modification of the route / to show the post list and the welcome title
Highlighting the last post recieve

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,17 +1,14 @@
-index:
-    path: /
-    controller: App\Controller\BlogController::index
 
 post:
-    path: /post
+    path: /
     controller: App\Controller\PostController::index
 
 post_create:
-    path: /post/new/
+    path: /post/new
     controller: App\Controller\PostController::createPost
 
 post_delete_all:
-  path : /post/delete/
+  path : /post/delete
   controller: App\Controller\PostController::deleteAllPost
 
 post_show:
