Creation of the button and the route to navigate to the form

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,9 +3,9 @@ post:
     path: /
     controller: App\Controller\PostController::index
 
-post_create:
+form_create:
     path: /post/new
-    controller: App\Controller\PostController::createPost
+    controller: App\Controller\PostController::showForm
 
 post_delete_all:
   path : /post/delete
