--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -7,6 +7,10 @@ form_create:
     path: /post/new
     controller: App\Controller\PostController::showForm
 
+post_create:
+    path: /
+    controller: App\Controller\PostController::createPost
+
 post_delete_all:
   path : /post/delete
   controller: App\Controller\PostController::deleteAllPost
