--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,11 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "ext-gd": "*",
         "php": "^7.1.3",
         "ext-ctype": "*",
+        "ext-gd": "*",
         "ext-iconv": "*",
         "friendsofsymfony/user-bundle": "~2.0",
-        "liip/imagine-bundle": "^2.2",
         "sensio/framework-extra-bundle": "^5.1",
         "stof/doctrine-extensions-bundle": "^1.3",
         "symfony/apache-pack": "^1.0",
@@ -81,7 +80,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": "true",
             "require": "4.3.*"
         }
     }
