--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -16,17 +16,17 @@ post_delete_all:
     controller: App\Controller\PostController::deleteAllPost
 
 post_show:
-    path: /post/{id}
+    path: /post/{slug}
     controller: App\Controller\PostController::showPost
 
 post_delete:
     path : /post/delete/{id}
     controller: App\Controller\PostController::deletePost
 
-post_edit :
+post_edit:
     path : /post/edit/{id}
     controller: App\Controller\PostController::editPost
 
-post_pinned : 
+post_pinned:
     path : /post/pin/{id}
     controller: App\Controller\PostController::pinPost
