--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,9 +3,14 @@ index:
     path: /
     controller: App\Controller\PostController::index
 
+login:
+    path : /login
+
+logout:
+    path: /logout
+    
 register:
     path : /register
-    controller: App\Controller\RegistrationController::register
 
 post_create:
     path: /post/new
