--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,7 +1,7 @@
 
-index:
+default:
     path: /
-    controller: App\Controller\PostController::index
+    controller: App\Controller\PostController::homepage
 
 login:
     path : /login
@@ -12,13 +12,13 @@ logout:
 register:
     path : /register
 
+index:
+    path: /{username}
+    controller: App\Controller\PostController::index
+
 post_create:
     path: /post/new
     controller: App\Controller\PostController::createPost
-
-post_delete_all:
-    path : /post/delete
-    controller: App\Controller\PostController::deleteAllPost
 
 post_show:
     path: /post/{slug}
