--- a/config/services.yaml
+++ b/config/services.yaml
@@ -26,3 +26,6 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    UserBundle\:
+        resource: '../vendor/friendsofsymfony/user-bundle/Controller/*'
+        exclude: '../vendor/friendsofsymfony/user-bundle/Controller/*'
