--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-gd": "*",
         "ext-iconv": "*",
         "ext-zip": "*",
+        "aws/aws-sdk-php": "^3.130",
         "friendsofsymfony/ckeditor-bundle": "^2.1",
         "friendsofsymfony/user-bundle": "~2.0",
         "sensio/framework-extra-bundle": "^5.1",
