--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "ext-iconv": "*",
         "ext-zip": "*",
         "aws/aws-sdk-php": "^3.130",
+        "debril/rss-atom-bundle": "^5.0",
         "friendsofsymfony/ckeditor-bundle": "^2.1",
         "friendsofsymfony/user-bundle": "~2.0",
         "sensio/framework-extra-bundle": "^5.1",
@@ -33,7 +34,8 @@
         "symfony/twig-pack": "^1.0",
         "symfony/validator": "4.3.*",
         "symfony/web-link": "4.3.*",
-        "symfony/yaml": "4.3.*"
+        "symfony/yaml": "4.3.*",
+        "twig/extensions": "^1.5"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
