--- a/config/services.yaml
+++ b/config/services.yaml
@@ -26,6 +26,11 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    twig.extension.text:
+        class: Twig_Extensions_Extension_Text
+        tags:
+            - { name: twig.extension }
+
     UserBundle\:
         resource: '../vendor/friendsofsymfony/user-bundle/Controller/*'
         exclude: '../vendor/friendsofsymfony/user-bundle/Controller/*'
